# GRANOLA

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTIONS.txt  MANIFEST.in  README.md  README.rst  Untitled.ipynb  cereal_cmds.csv  config.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tasks.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: documentation_request.md  question.md
.github/workflows/: build.yaml  codeql-analysis.yml  coverage.yaml  lint.yaml  test.yaml
.github/workflows/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
docs/: api.rst  base_hook.rst  bk_cereal.rst  command_readers.rst  conf.py  deprecated_api.rst  enums.rst  examples_notebooks.rst  hooks.rst  index.rst  logging.rst  serial_sniffer.rst  utils.rst
docs/config/: canned_queries.rst  config.rst  cr_hooks_cfg.rst  getters_and_setters.rst  moving_to_v0_9_0.rst
docs/examples/: examples_notebooks.rst  getters_and_setters_jinja2.ipynb
examples/: basic_usage.ipynb
granola/: __init__.py  _version.py  breakfast_cereal.py  command_readers.py  enums.py  main.py  serial_sniffer.py  utils.py
granola/hooks/: base_hook.py  hooks.py
granola/tests/: config.json  config_deprecations.json  conftest.py  test_attribute_access.py  test_deprecations.py  test_enums.py  test_serial_cmd_obj.py  test_setup.py  test_utils.py
granola/tests/data/: sensor_cmds.csv  sensor_get_reading_cmds.csv
granola/tests/serial_tests/: test_canned_queries.py  test_cereal_attributes.py  test_cereal_cmds.py  test_getters_and_setters.py  test_hooks.py  test_multiple_canned_queries_csvs.py  test_open_close.py  test_serial_sniffer.py
