[metadata]
name = granola
description = Generating Real-time Autonomous N-device Output without Linked Apparatuses
author = TODO madeline change
author_email = TODO madeline change
long_description = file: README.md
long_description_content_type = text/markdown
url = todo madeline change
project_urls =
    Bug Tracker =  todo madeline change
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3*, !=3.4*
include_package_data = True
install_requires =
    aenum >=3;python_version<="3.5"
    mock;python_version<"3"
    pathlib>=1.0.1;python_version<"3"
    pandas
    pyserial >=2.6
    future>=0.18.2
    attrs>=21
    more-itertools
    Jinja2>=2.0

[options.extras_require]
test =
    pytest
    pytest-cov
dev =
    versioneer==0.18
    pre-commit
    flake8
    black<=21.12b0;python_version>"3"
    black[jupyter]<=21.12b0;python_version>"3"
    isort
docs =
    myst-parser;python_version>"3"
    sphinx;python_version>"3"
    sphinx-rtd-theme;python_version>"3"
    ipython;python_version>"3"
    ipykernel;python_version>"3"
    myst-nb;python_version>"3"
examples =
    ipython
    jupyter

[options.packages.find]
include = granola, granola.*

[versioneer]
VCS = git
style = pep440
versionfile_source = granola/_version.py
versionfile_build = granola/_version.py
tag_prefix =
parentdir_prefix = granola-