[metadata]
name = granola
description = Generating Real-time Autonomous N-device Output without Linked Apparatuses
author = GRANOLA Development Team
author_email = granola@metergroup.com
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://granola.readthedocs.io/
project_urls =
    Bug Tracker = https://github.com/metergroup/GRANOLA/issues
    Documentation = https://granola.readthedocs.io/
    Source Code = https://github.com/metergroup/GRANOLA
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3*, !=3.4*
include_package_data = True
install_requires =
    aenum >=3;python_version<="3.5"
    mock;python_version<"3"
    pathlib>=1.0.1;python_version<"3"
    pandas
    pyserial >=2.6
    future>=0.18.2
    attrs>=21
    more-itertools
    Jinja2>=2.0

[options.extras_require]
test =
    pytest
    pytest-cov
dev =
    versioneer==0.18
    pre-commit
    flake8
    black<=21.12b0;python_version>"3.6"
    black[jupyter]<=21.12b0;python_version>"3.6"
    click<8.1.0;python_version>"3.6"  # Temporary workaround for something click did that broke black (2022/02/31), can remove after black fix and we are off of python 2
    isort;(python_version>"3" and sys_platform == "win32") or sys_platform != "win32"
    invoke
    lexicon;python_version<"3"  # invoke needs this for some stuff in py2
docs =
    myst-parser;python_version>"3"
    sphinx;python_version>"3"
    sphinx-rtd-theme;python_version>"3"
    ipython;python_version>"3"
    ipykernel;python_version>"3"
    myst-nb;python_version>"3"
examples =
    ipython
    ipykernel
    jupyter;python_version>"3"

[options.packages.find]
include = granola, granola.*

[versioneer]
VCS = git
style = pep440
versionfile_source = granola/_version.py
versionfile_build = granola/_version.py
tag_prefix =
parentdir_prefix = granola-
